Tests/context/invalid/class14.java
class A{
    int a;
    float b;

    boolean setA(int a){
        return a;
    }
}